--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="/src/css/materialize.min.css"  media="screen,projection"/>
+    <!--Import google icons-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>LNRN</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+      <!--JavaScript at end of body for optimized loading-->
+      <script type="text/javascript" src="/src/js/materialize.min.js"></script>
   </body>
 </html>
